# IndoorCD-Benchmark

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  run_benchmark.py
assets/: README.md
configs/: default.yaml
docs/: DATASET.md  EVALUATION.md  METHODS.md
examples/: custom_method.py  quick_start.py
scripts/: visualize_results.py
src/evaluation/: metrics.py
src/methods/: classical.py
src/utils/: data_loader.py
test_results/: report_20260109_002604.txt  results_20260109_002604.json
test_results/predictions_multi_stage_20260109_002604/: 009-3.json  009-4.json  009-5.json  010-4.json  011-3.json  011-4.json  026-2.json  026-5.json  027-2.json  027-4.json  030-3.json  032-3.json  032-4.json  040-4.json  040-5.json  056-3.json  056-4.json  062-2.json  062-3.json  062-4.json  063-2.json  063-3.json  063-5.json  064-4.json  064-5.json  066-2.json  069-3.json  069-4.json  069-5.json  077-3.json  117-2.json  117-4.json  117-5.json  125-5.json  140-3.json  151-3.json  151-5.json  155-4.json  155-5.json  163-2.json  (+21 more)
test_results_v2/: dataset_split.json  report_20260109_005520.txt  results_20260109_005520.json  tables_20260109_005520.tex
test_results_v2/predictions_multi_stage_20260109_005520/: 009-2.json  010-3.json  010-5.json  011-2.json  011-5.json  026-3.json  026-4.json  027-3.json  030-2.json  030-4.json  030-5.json  032-2.json  032-5.json  040-3.json  056-2.json  056-5.json  062-5.json  064-2.json  064-3.json  066-3.json  066-5.json  069-2.json  077-2.json  077-5.json  117-3.json  118-2.json  118-3.json  118-4.json  125-3.json  125-4.json  140-2.json  151-2.json  151-4.json  155-2.json  155-3.json  162-2.json  162-3.json  162-4.json  162-5.json  163-3.json  (+22 more)
